--- a/src/components/headerBack.module.css
+++ b/src/components/headerBack.module.css
@@ -9,7 +9,7 @@
   width: 100%;
   left: 0;
   top: 0;
-  z-index: 99999;
+  z-index: 100;
 }
 
 .backButton {
